--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-ROUNDS = 10
+ROUNDS = '10'
 SECRET = 'jsdhfuweyrmqwqwemzxzetQEDHFR'
 URI = 'mongodb+srv://rohanToss:rohan123@cluster0.4rcmz.mongodb.net/testdatabase?retryWrites=true&w=majority'
