--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT = 5000
 ROUNDS = '10'
 SECRET = 'jsdhfuweyrmqwqwemzxzetQEDHFR'
 URI = 'mongodb+srv://rohanToss:rohan123@cluster0.4rcmz.mongodb.net/testdatabase?retryWrites=true&w=majority'
+SID = AC53f50e4f5702b3b2b0c195172d311524
+SMSSECRET=ed303ac9aed1e3435fa5662edf5a5084
+NUMBER_SEND = +17633163814
